--- a/Main/SEToolbox/SEToolbox/Views/WindowLoad.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowLoad.xaml
@@ -48,7 +48,7 @@
                                 <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=folder}" />
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Open Workshop" Command="{Binding OpenWorkshopCommand}">
+                        <MenuItem Header="View Workshop" Command="{Binding OpenWorkshopCommand}">
                             <MenuItem.Icon>
                                 <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=workshop16}" />
                             </MenuItem.Icon>
